# airpulse

./: .env.example  DATA_GOVERNANCE.md  DATA_GOVERNANCE.zh-TW.md  MODELING_PLAN.md  MODELING_PLAN.zh-TW.md  PIPELINE.md  PIPELINE.zh-TW.md  README.md  README.zh-TW.md  pyproject.toml
.dg/: telemetry.yaml
.github/workflows/: dagster-plus-deploy.yml
docs/superpowers/plans/: 2026-06-06-ml-timeseries-upgrade.md
src/airpulse/defs/: checks.py  cleaning.py  evaluation.py  features.py  governance.py  history.py  ingestion.py  metrics.py  modeling.py  pipeline_defs.py  postgres.py  sensors.py
tests/: test_evaluation.py  test_features.py
