[project]
name = "airpulse"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-cloud[serverless]>=1.13.7",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.12",
    "requests>=2.34.2",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "airpulse"
registry_modules = [
    "airpulse.components.*",
]


